# data-structure-exercises

./: .gitignore  README.md
Ex1 - order management/: .gitignore
Ex1 - order management/include/: utility.h
Ex2_xml_parser/: CMakeLists.txt
Ex3_memory_management/: .gitignore
Ex4_cache_management/: CMakeLists.txt
Ex4_cache_management/src/: lru_mru_mfu_cache.cpp
Ex5 - prefix tree/: spell_check
Ex5_prefix tree/: autocomplete_recsys.c  spell_check_input.txt
Ex6_variable_scope_management/: .gitignore
Ex7_document_clustering/: .gitignore  CMakeLists.txt
Ex8_user_session_manager/: .gitignore
cache management/: CMakeLists.txt
document clustering/: MakeFile
dynamic memory allocation management/: Dynamic_memory.c  main.c  memblock.h
dynamic memory management/: ghichep.txt
lru cache/: lrucache.cpp
memory management/: CMakeLists.txt
memory management/docs/: ghichep.txt
memory management/include/: buddy_alloc.h
memory management/output/: output.txt
memory management/src/: buddy_alloc.c  main.c  mem_alloc.c
order management/: CMakeLists.txt  settings.json
order management/input/: order_input1.txt  order_input2.txt  order_input3.txt
order management/output/: bill_04.txt
order management/src/: dish.c  main.c
prefix tree/: autocomplete_recsys  autocomplete_recsys.c  spell_check  spell_check.c
user session manager/: .gitignore  CmakeLists.txt
variable scope management/: CMakeLists.txt
variables scope/: CMakeLists.txt  Variables_scope.c  vs_input.txt
xml file analysis/: XML.c  XML_output.xml  a.out  xml_input.txt
xml/src/: main.c  (+1 more)
(+67 files in other folders)
